@@ -1,3 +1,8 @@
+Mon Oct 21 12:59:50 1996  Per Bothner  <bothner@deneb.cygnus.com>
+
+	* IntNum.java (set):  Fix ival clash problem.
+	(valueOf):  Check for high-order bit set.
+
 Thu Oct 17 22:00:51 1996  Per Bothner  <bothner@deneb.cygnus.com>
 
 	* MPN.java (sub_n, udiv_qrnnd, divmod_1, rshift, lshift,
